--- a/index.html
+++ b/index.html
@@ -476,9 +476,9 @@
                 
                 <div style="margin-top: 2rem;">
                     <h3>Get in Touch</h3>
-                    <p><strong>Email:</strong> info@kedu.com</p>
-                    <p><strong>Phone:</strong> +1 (555) 123-4567</p>
-                    <p><strong>Address:</strong> 123 Education Street, Learning City, LC 12345</p>
+                    <p><strong>Email:</strong> dmkaawya@gmail.com</p>
+                    <p><strong>Phone:</strong> +94 077 50 48 455</p>
+                    <p><strong>Address:</strong> Kalutara south,kalutara,western province,Sri lanka</p>
                 </div>
 
                 <div style="margin-top: 2rem;">
@@ -490,7 +490,7 @@
 
                 <div style="margin-top: 2rem;">
                     <h3>For Educators</h3>
-                    <p>Interested in contributing to our platform? Contact us at <strong>educators@kedu.com</strong> to learn about becoming a content curator.</p>
+                    <p>Interested in contributing to our platform? Contact us at <strong>dmkaawya@gmail.com</strong> to learn about becoming a content curator.</p>
                 </div>
             </div>
         </div>
