--- a/index.html
+++ b/index.html
@@ -889,5 +889,8 @@
         // Initialize the website when page loads
         document.addEventListener('DOMContentLoaded', init);
     </script>
+<script>document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+});</script>
 </body>
 </html>
