--- a/index.html
+++ b/index.html
@@ -536,27 +536,15 @@
                 <div class="staff-grid" style="margin-top: 2rem;">
                     <div class="staff-card">
                         <div class="staff-avatar" aria-label="Avatar for Dr. Jane Doe">JD</div>
-                        <h3>Dr. Jane Doe</h3>
+                        <h3>D.M.C.Kaawya Chandrasekara</h3>
                         <p><strong>Chief Education Officer</strong></p>
-                        <p>Ph.D. in Education Technology with 15 years of experience in curriculum development.</p>
+                        <p>Certificates in web devoloper with 4 years of experience in Basic web development.</p>
                     </div>
                     <div class="staff-card">
                         <div class="staff-avatar" aria-label="Avatar for Prof. Mike Smith">MS</div>
-                        <h3>Prof. Mike Smith</h3>
-                        <p><strong>Content Director</strong></p>
-                        <p>Mathematics educator and content specialist with expertise in online learning platforms.</p>
-                    </div>
-                    <div class="staff-card">
-                        <div class="staff-avatar" aria-label="Avatar for Sarah Johnson">SJ</div>
-                        <h3>Sarah Johnson</h3>
+                        <h3>Sandeepa lakshan</h3>
                         <p><strong>Platform Administrator</strong></p>
-                        <p>Technology specialist ensuring smooth operation of our educational platform.</p>
-                    </div>
-                    <div class="staff-card">
-                        <div class="staff-avatar" aria-label="Avatar for Dr. Alex Brown">AB</div>
-                        <h3>Dr. Alex Brown</h3>
-                        <p><strong>Science Curriculum Lead</strong></p>
-                        <p>Research scientist and educator specializing in making complex concepts accessible.</p>
+                        <p>Diploma in Web devoloper with 6 years of exprience in Exprect web development</p>
                     </div>
                 </div>
                 <div style="margin-top: 3rem; padding: 2rem; background: #f8f9fa; border-radius: 10px;">
@@ -702,6 +690,8 @@
             } catch (err) {
                 console.error('Error loading categories:', err);
                 container.innerHTML = '<p style="text-align: center; color: #666;">Error loading categories. Please try again later.</p>';
+                container.innerHTML = '<p style="text-align: center; color: #666;">If it doesn't work, try logging in Username - admin, Password - admin123.</p>';
+                container.innerHTML = '<p style="text-align: center; color: #666;">But if it doesn't work, contact us from the Contact tab.dmkaawya@gmail.com.</p>';
                 loader.style.display = 'none';
             }
         }
@@ -806,7 +796,10 @@
             } catch (err) {
                 console.error('Error searching videos:', err);
                 container.innerHTML = '<p style="text-align: center; color: #666;">Error searching videos. Please try again later.</p>';
+                container.innerHTML = '<p style="text-align: center; color: #666;">If it doesn't work, try logging in Username - admin, Password - admin123.</p>';
+                container.innerHTML = '<p style="text-align: center; color: #666;">But if it doesn't work, contact us from the Contact tab.dmkaawya@gmail.com.</p>';
                 loader.style.display = 'none';
+                
             }
         }
 
