--- a/index.html
+++ b/index.html
@@ -1184,19 +1184,19 @@
                 { id: 9, title: "Korean Culture", description: "Understanding Korean traditions", type: "paid", duration: "1h 15min", url: "https://www.youtube.com/embed/5yHlHJl_BqE" }
             ],
              network: [
-                { id: 7, title: "Network Engineer Roadmap(2025)", description: "How to Become a Network Engineer - Beginner to Advanced", type: "free", duration: "11 min", url: "https://youtu.be/pwWeoqNMmAo?si=yiR3xfYcDZf1IyFc" },
-                { id: 8, title: "what is an IP Address?", description: "You SUCK at Subnetting EP 01", type: "free", duration: "19 Min", url: "https://youtu.be/5WfiTHiU4x8?si=fVMZ3G2GGsexpA1L" },
-                { id: 9, title: "you need to learn Python RIGHT NOW!!", description: "Python Start EP 01", type: "Free", duration: "18min", url: "https://youtu.be/mRMmlo_Uqcs?si=fXPjXbfLDl-CVYk0" }
+                { id: 10, title: "Network Engineer Roadmap(2025)", description: "How to Become a Network Engineer - Beginner to Advanced", type: "free", duration: "11 min", url: "https://youtu.be/pwWeoqNMmAo?si=yiR3xfYcDZf1IyFc" },
+                { id: 11, title: "what is an IP Address?", description: "You SUCK at Subnetting EP 01", type: "free", duration: "19 Min", url: "https://youtu.be/5WfiTHiU4x8?si=fVMZ3G2GGsexpA1L" },
+                { id: 12, title: "you need to learn Python RIGHT NOW!!", description: "Python Start EP 01", type: "Free", duration: "18min", url: "https://youtu.be/mRMmlo_Uqcs?si=fXPjXbfLDl-CVYk0" }
             ],
             maths: [
-                { id: 10, title: "Algebra Fundamentals", description: "Master algebraic concepts", type: "free", duration: "1h", url: "https://www.youtube.com/embed/3DyBj7dOyNk" },
-                { id: 11, title: "Calculus Introduction", description: "Limits, derivatives, and integrals", type: "paid", duration: "2h 30min", url: "https://www.youtube.com/embed/WUvTyaaNkzM" },
-                { id: 12, title: "Statistics for Beginners", description: "Basic statistical concepts", type: "free", duration: "1h 15min", url: "https://www.youtube.com/embed/TMZ3uF6XG1c" }
+                { id: 13, title: "Algebra Fundamentals", description: "Master algebraic concepts", type: "free", duration: "1h", url: "https://www.youtube.com/embed/3DyBj7dOyNk" },
+                { id: 14, title: "Calculus Introduction", description: "Limits, derivatives, and integrals", type: "paid", duration: "2h 30min", url: "https://www.youtube.com/embed/WUvTyaaNkzM" },
+                { id: 15, title: "Statistics for Beginners", description: "Basic statistical concepts", type: "free", duration: "1h 15min", url: "https://www.youtube.com/embed/TMZ3uF6XG1c" }
             ],
             media: [
-                { id: 13, title: "Digital Photography", description: "Master your camera skills", type: "paid", duration: "2h", url: "https://www.youtube.com/embed/7o2V5LjH4sE" },
-                { id: 14, title: "Video Editing Basics", description: "Learn professional editing techniques", type: "paid", duration: "1h 45min", url: "https://www.youtube.com/embed/GI5J9LrP_9s" },
-                { id: 15, title: "Social Media Marketing", description: "Effective social media strategies", type: "free", duration: "1h", url: "https://www.youtube.com/embed/fO1ii0S_rTo" }
+                { id: 16, title: "Digital Photography", description: "Master your camera skills", type: "paid", duration: "2h", url: "https://www.youtube.com/embed/7o2V5LjH4sE" },
+                { id: 17, title: "Video Editing Basics", description: "Learn professional editing techniques", type: "paid", duration: "1h 45min", url: "https://www.youtube.com/embed/GI5J9LrP_9s" },
+                { id: 18, title: "Social Media Marketing", description: "Effective social media strategies", type: "free", duration: "1h", url: "https://www.youtube.com/embed/fO1ii0S_rTo" }
             ]
         };
 
@@ -1277,7 +1277,7 @@
                 english: 'English',
                 korean: 'Korean',
                 maths: 'Mathematics',
-                media: 'Media Studies'
+                media: 'Media Studies',
                 network: 'Networking'
             };
             
